--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     <div class="container">
       <div class="row home">
         <div class="col-12 col-lg-4">
-          <h1>A Digital Agency <br />Focused on Web.</h1>
+          <h1>Web Design</h1>
+          <h3>A Digital Agency Focused on Web.</h3>
 
           <p>We are a creative team of designers, developers, strategists, and producers building elevated websites.</p>
         </div>
