kerangka about us

--- a/index.html
+++ b/index.html
@@ -54,17 +54,28 @@
     <!-- navbar -->
 
     <!-- homepage -->
-    <div class="container">
-      <div class="row home">
-        <div class="col-12 col-lg-4">
-          <h1>Web Design</h1>
-          <h3>A Digital Agency Focused on Web.</h3>
-
-          <p>We are a creative team of designers, developers, strategists, and producers building elevated websites.</p>
+    <section class="home" id="home">
+      <div class="container">
+        <div class="row home">
+          <div class="col-12 col-lg-4">
+            <h1>Web Design</h1>
+            <h3>A Digital Agency Focused on Web.</h3>
+            <p>We are a creative team of designers, developers, strategists, and producers building elevated websites.</p>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
     <!-- homepage -->
+
+    <!-- about us -->
+    <section class="about" id="about">
+      <div class="container">
+        <div class="row about">
+          <div class="col-12 col-lg-4"></div>
+        </div>
+      </div>
+    </section>
+    <!-- about us -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
