--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-light cs-nav bg-transparent my-4">
+    <nav class="navbar navbar-expand-lg cs-nav bg-transparent my-4">
       <div class="container">
         <a class="navbar-brand" href="#"> <img src="pict/logo.png" alt="LogoEz" class="cs-logo" /> <span>Eazy</span></a>
         <button
@@ -33,19 +33,19 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">HOME</a>
+              <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">ABOUT</a>
+              <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">SERVICES</a>
+              <a class="nav-link" href="#">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">PORTOFOLIO</a>
+              <a class="nav-link" href="#work">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link btn btn-primary contact-button" href="#">CONTACT US</a>
+              <a class="btn btn-primary contact-button" href="#">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -55,12 +55,14 @@
 
     <!-- homepage -->
     <section class="home" id="home">
-      <div class="container">
-        <div class="row home">
-          <div class="col-12 col-lg-4">
-            <h1>Web Design</h1>
-            <h3>A Digital Agency Focused on Web.</h3>
-            <p>We are a creative team of designers, developers, strategists, and producers building elevated websites.</p>
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <div class="row home">
+            <div class="col-12 col-lg-4">
+              <h1>Web Design</h1>
+              <h3>A Digital Agency Focused on Web.</h3>
+              <p>We are a creative team of designers, developers, strategists, and producers building elevated websites.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -68,14 +70,67 @@
     <!-- homepage -->
 
     <!-- about us -->
-    <section class="about" id="about">
+    <section class="about section-margin" id="about">
       <div class="container">
-        <div class="row about">
-          <div class="col-12 col-lg-4"></div>
+        <div class="row">
+          <div class="col-12">
+            <h1>About Us</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col"></div>
         </div>
       </div>
     </section>
     <!-- about us -->
+
+    <!-- our valuable service -->
+    <section class="service section-margin" id="service">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1>Our Valuable Service</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col"></div>
+        </div>
+      </div>
+    </section>
+    <!-- our valuable service -->
+
+    <!-- our work -->
+    <section class="section-margin work" id="work">
+      <div class="container">
+        <div class="row-lg-12">
+          <div class="col-lg-12">
+            <h1>Our Work</h1>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-lg-6"><img src="pict/fp2.png" alt="fp2.png" class="img-fluid" /></div>
+          <div class="col-lg-6">
+            <h3>Rent Car Website</h3>
+            <p class="text-work">iOS | ANDROID | WEB DEVELOPMENT</p>
+            <p class="sub-text-work">
+              Eazy Rent car website is a website that we make as simple as possible so that users are easy and comfortable using it.
+            </p>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-lg-6">
+            <h3>Travel Website</h3>
+            <p class="text-work">iOS | ANDROID | WEB DEVELOPMENT</p>
+            <p class="sub-text-work">
+              Eazy travel is a website that provides booking services for your holiday trips. We made the website with a minimalist design so that it
+              still makes users comfortable and easy.
+            </p>
+          </div>
+          <div class="col-lg-6"><img src="pict/fp1.png" alt="fp1.png" class="img-fluid" /></div>
+        </div>
+      </div>
+    </section>
+    <!-- our work -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
