--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <!--Icon Bootstrap-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <!-- Css Customize -->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -36,10 +38,10 @@
               <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="#service">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#work">Portfolio</a>
@@ -78,7 +80,13 @@
           </div>
         </div>
         <div class="row">
-          <div class="col"></div>
+          <div class="col">
+            <div class="deskripsi text-center">
+              <p>
+                Eazy is a service company that focuses on the field of web design. <br> We help make your web design a reality. <br> With Eazy your work will be easy
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -86,16 +94,51 @@
 
     <!-- our valuable service -->
     <section class="service section-margin" id="service">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h1>Our Valuable Service</h1>
+        <div class="container">
+          <div class="row">
+            <div class="title-service text-center col-12">
+              <h1>Our Valuable Service</h1>
+            </div>
+          </div>
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/pict/service1.png" class="justify-content-center w-90"  alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Mobile App Design</h5>
+                  <p>We can create and realize your mobile app design</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./pict/service2.png" class="justify-content-center w-90" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Website Design</h5>
+                  <p>We can create and realize the design of your website</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./pict/service3.png" class="justify-content-center w-90" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Desktop App Design</h5>
+                  <p>We can create and realize your desktop app design</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
         </div>
-        <div class="row">
-          <div class="col"></div>
-        </div>
-      </div>
     </section>
     <!-- our valuable service -->
 
@@ -131,6 +174,183 @@
       </div>
     </section>
     <!-- our work -->
+    <!--Contact-->
+    <section class="contact" id="contact-me">
+      <div class="container">
+        <div class="row" data-aos="fade-up">
+          <div class="col-md-6 col-12">
+            <div class="text-contact">
+              <div class="text-question">Questions, Comments, Concerns?</div>
+              <h1>We’d love to <span>hear</span> from you!</h1>
+            </div>
+          </div>
+          <div class="col-md-6 col-12">
+            <div class="form-contact">
+              <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label"
+                  >Your Email address</label
+                >
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="example@gmail.com"
+                />
+                <small id="email-input" class="text-danger"></small>
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label"
+                  >Subject</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="subject"
+                  placeholder="Question About Your Article"
+                />
+                <small id="subject-input" class="text-danger"></small>
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label"
+                  >Message</label
+                >
+                <textarea
+                  class="form-control"
+                  id="message"
+                  rows="3"
+                  placeholder="Your message starts with…"
+                ></textarea>
+                <small id="message-input" class="text-danger"></small>
+              </div>
+              <button type="button" class="btn-contact" id="btnmessage">
+                Send a Message
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Contact-->
+    <!--Footer-->
+    <footer>
+      <section class="footer">
+        <div class="container-fluid text-white p-3" style="background: #020e35">
+          <div class="row justify-content-around text-center text-md-start">
+            <div class="col-md-2 text-center mt-3">
+              <img
+                src="./pict/logo.png"
+                alt=""
+                style="width: 50px; height: 50px"
+              />
+            </div>
+            <div class="col-md-2">
+              <ul class="list-unstyled">
+                <li class="fw-bold my-2">Contact</li>
+                <li>
+                  <a href="#" class="text-decoration-none text-white"
+                    >Facebook</a
+                  >
+                </li>
+                <li>
+                  <a href="#" class="text-decoration-none text-white">
+                    Instagram</a
+                  >
+                </li>
+                <li>
+                  <a href="#" class="text-decoration-none text-white"
+                    >Telegram</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-2">
+              <ul class="list-unstyled">
+                <li class="fw-bold my-2">About</li>
+                <li>
+                  <a href="#" class="text-decoration-none text-white"
+                    >Our Project</a
+                  >
+                </li>
+                <li>
+                  <a href="#" class="text-decoration-none text-white"
+                    >Careers</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-2">
+              <ul class="list-unstyled">
+                <li class="fw-bold my-2">Support</li>
+                <li>
+                  <a href="#" class="text-decoration-none text-white"
+                    >Email</a
+                  >
+                </li>
+                <li>
+                  <a href="#" class="text-decoration-none text-white"
+                    >Support Request</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-2">
+              <li
+                class="fw-bold my-2 list-unstyled"
+                style="color: #ccb800; font-size: 20px"
+              >
+                Follow us
+              </li>
+              <ul
+                class="list-unstyled d-flex justify-content-center justify-content-md-start"
+              >
+                <li>
+                  <a href="#" class="text-white"
+                    ><i class="fa-brands fa-facebook me-2 fa-2x"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="#" class="text-white"
+                    ><i class="fa-brands fa-whatsapp mx-2 fa-2x"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="#" class="text-white"
+                    ><i class="fa-brands fa-youtube mx-2 fa-2x"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="#" class="text-white"
+                    ><i class="fa-brands fa-instagram mx-2 fa-2x"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <hr />
+          <div class="row">
+            <div class="col-md-12 text-center pt-1">
+              <p>
+                <a href="" style="color: #ccb800" class="text-decoration-none"
+                  >2022 © All rights reserved by Kelompok 11</a
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </footer>
+    <!--Footer-->
+    <!-- sweetalert -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Script AOS  -->
+    <script>
+      const btnmessage = document.getElementById('btnmessage');
+      btnmessage.addEventListener('click', function(){
+        Swal.fire('Your message has been successfully sent')
+
+      })
+    </script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
