--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <!--Icon Bootstrap-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
     <!-- Css Customize -->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -47,7 +47,7 @@
               <a class="nav-link" href="#work">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-primary contact-button" href="#">Contact Us</a>
+              <a class="btn btn-primary contact-button" href="#contact-me">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -80,10 +80,15 @@
           </div>
         </div>
         <div class="row">
-          <div class="col">
+          <div class="col-lg-12">
             <div class="deskripsi text-center">
               <p>
-                Eazy is a service company that focuses on the field of web design. <br> We help make your web design a reality. <br> With Eazy your work will be easy
+                Eazy is a service company that focuses on the field of web design. <br />We help make your web design a reality. With Eazy your work
+                will be easy. <br />
+                Let our team of smart, passionate and creative talent help your business innovate and stay ahead of the competition in an
+                app-connected world. With a focus on our work manufacturing companies and consultancies, our vision is to understand our clients to
+                the fullest. This industry knowledge coupled with our collaborative approach ensures that our mission to deliver exceptional
+                measurable results is achieved through thoughtful web design and sound website development services.
               </p>
             </div>
           </div>
@@ -94,51 +99,58 @@
 
     <!-- our valuable service -->
     <section class="service section-margin" id="service">
-        <div class="container">
-          <div class="row">
-            <div class="title-service text-center col-12">
-              <h1>Our Valuable Service</h1>
-            </div>
-          </div>
-          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="/pict/service1.png" class="justify-content-center w-90"  alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Mobile App Design</h5>
-                  <p>We can create and realize your mobile app design</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./pict/service2.png" class="justify-content-center w-90" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Website Design</h5>
-                  <p>We can create and realize the design of your website</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./pict/service3.png" class="justify-content-center w-90" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Desktop App Design</h5>
-                  <p>We can create and realize your desktop app design</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+      <div class="container">
+        <div class="row">
+          <div class="title-service text-center col-12">
+            <h1>Our Valuable Service</h1>
           </div>
         </div>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="/pict/service1.png" class="justify-content-center w-90" alt="..." />
+              <div class="carousel-caption d-md-block">
+                <h5>Mobile App Design</h5>
+                <p>We can create and realize your mobile app design</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./pict/service2.png" class="justify-content-center w-90" alt="..." />
+              <div class="carousel-caption d-md-block">
+                <h5>Website Design</h5>
+                <p>We can create and realize the design of your website</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./pict/service3.png" class="justify-content-center w-90" alt="..." />
+              <div class="carousel-caption d-md-block">
+                <h5>Desktop App Design</h5>
+                <p>We can create and realize your desktop app design</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
     </section>
     <!-- our valuable service -->
 
@@ -150,8 +162,13 @@
             <h1>Our Work</h1>
           </div>
         </div>
+        <div class="row-lg-12">
+          <div class="col-lg-12">
+            <h4>We have highly skilled engineers with excellent technical knowledge and experience in using the latest software standards.</h4>
+          </div>
+        </div>
         <div class="row mt-5">
-          <div class="col-lg-6"><img src="pict/fp2.png" alt="fp2.png" class="img-fluid" /></div>
+          <div class="col-lg-6"><img src="pict/fp2.png" alt="fp2.png" class="img-fluid" style="height: 330px" /></div>
           <div class="col-lg-6">
             <h3>Rent Car Website</h3>
             <p class="text-work">iOS | ANDROID | WEB DEVELOPMENT</p>
@@ -171,12 +188,32 @@
           </div>
           <div class="col-lg-6"><img src="pict/fp1.png" alt="fp1.png" class="img-fluid" /></div>
         </div>
+        <div class="row mt-5">
+          <div class="col-lg-6"><img src="pict/fp1(1).png" alt="fp1(1).png" class="img-fluid" style="height: 340px" /></div>
+          <div class="col-lg-6">
+            <h3>Development Webiste</h3>
+            <p class="text-work">iOS | ANDROID | WEB DEVELOPMENT</p>
+            <p class="sub-text-work">We provide end to end web development services, from creating a prototype to building a complex ones.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row-lg-12 work-button">
+        <div class="col-lg-12  ">
+          <a class="btn " href="">See All Work</a>
+            </li>
+        </div>
       </div>
     </section>
+
     <!-- our work -->
     <!--Contact-->
     <section class="contact" id="contact-me">
       <div class="container">
+        <div class="row-lg-12">
+          <div class="col-lg-12 text-center mb-5">
+            <h1>Contact Us</h1>
+          </div>
+        </div>
         <div class="row" data-aos="fade-up">
           <div class="col-md-6 col-12">
             <div class="text-contact">
@@ -187,49 +224,27 @@
           <div class="col-md-6 col-12">
             <div class="form-contact">
               <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label"
-                  >Your Email address</label
-                >
-                <input
-                  type="email"
-                  class="form-control"
-                  id="email"
-                  placeholder="example@gmail.com"
-                />
+                <label for="exampleFormControlInput1" class="form-label">Your Email address</label>
+                <input type="email" class="form-control" id="email" placeholder="example@gmail.com" />
                 <small id="email-input" class="text-danger"></small>
               </div>
               <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label"
-                  >Subject</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="subject"
-                  placeholder="Question About Your Article"
-                />
+                <label for="exampleFormControlInput1" class="form-label">Subject</label>
+                <input type="text" class="form-control" id="subject" placeholder="Question About Your Article" />
                 <small id="subject-input" class="text-danger"></small>
               </div>
               <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label"
-                  >Message</label
-                >
-                <textarea
-                  class="form-control"
-                  id="message"
-                  rows="3"
-                  placeholder="Your message starts with…"
-                ></textarea>
+                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                <textarea class="form-control" id="message" rows="3" placeholder="Your message starts with…"></textarea>
                 <small id="message-input" class="text-danger"></small>
               </div>
-              <button type="button" class="btn-contact" id="btnmessage">
-                Send a Message
-              </button>
+              <button type="button" class="btn-contact" id="btnmessage">Send a Message</button>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <!--Contact-->
     <!--Footer-->
     <footer>
@@ -237,29 +252,19 @@
         <div class="container-fluid text-white p-3" style="background: #020e35">
           <div class="row justify-content-around text-center text-md-start">
             <div class="col-md-2 text-center mt-3">
-              <img
-                src="./pict/logo.png"
-                alt=""
-                style="width: 50px; height: 50px"
-              />
+              <img src="./pict/logo.png" alt="" style="width: 50px; height: 50px" />
             </div>
             <div class="col-md-2">
               <ul class="list-unstyled">
                 <li class="fw-bold my-2">Contact</li>
                 <li>
-                  <a href="#" class="text-decoration-none text-white"
-                    >Facebook</a
-                  >
+                  <a href="#" class="text-decoration-none text-white">Facebook</a>
                 </li>
                 <li>
-                  <a href="#" class="text-decoration-none text-white">
-                    Instagram</a
-                  >
+                  <a href="#" class="text-decoration-none text-white"> Instagram</a>
                 </li>
                 <li>
-                  <a href="#" class="text-decoration-none text-white"
-                    >Telegram</a
-                  >
+                  <a href="#" class="text-decoration-none text-white">Telegram</a>
                 </li>
               </ul>
             </div>
@@ -267,14 +272,10 @@
               <ul class="list-unstyled">
                 <li class="fw-bold my-2">About</li>
                 <li>
-                  <a href="#" class="text-decoration-none text-white"
-                    >Our Project</a
-                  >
+                  <a href="#" class="text-decoration-none text-white">Our Project</a>
                 </li>
                 <li>
-                  <a href="#" class="text-decoration-none text-white"
-                    >Careers</a
-                  >
+                  <a href="#" class="text-decoration-none text-white">Careers</a>
                 </li>
               </ul>
             </div>
@@ -282,46 +283,27 @@
               <ul class="list-unstyled">
                 <li class="fw-bold my-2">Support</li>
                 <li>
-                  <a href="#" class="text-decoration-none text-white"
-                    >Email</a
-                  >
+                  <a href="#" class="text-decoration-none text-white">Email</a>
                 </li>
                 <li>
-                  <a href="#" class="text-decoration-none text-white"
-                    >Support Request</a
-                  >
+                  <a href="#" class="text-decoration-none text-white">Support Request</a>
                 </li>
               </ul>
             </div>
             <div class="col-md-2">
-              <li
-                class="fw-bold my-2 list-unstyled"
-                style="color: #ccb800; font-size: 20px"
-              >
-                Follow us
-              </li>
-              <ul
-                class="list-unstyled d-flex justify-content-center justify-content-md-start"
-              >
+              <li class="fw-bold my-2 list-unstyled" style="color: #ccb800; font-size: 20px">Follow us</li>
+              <ul class="list-unstyled d-flex justify-content-center justify-content-md-start">
                 <li>
-                  <a href="#" class="text-white"
-                    ><i class="fa-brands fa-facebook me-2 fa-2x"></i
-                  ></a>
+                  <a href="#" class="text-white"><i class="fa-brands fa-facebook me-2 fa-2x"></i></a>
                 </li>
                 <li>
-                  <a href="#" class="text-white"
-                    ><i class="fa-brands fa-whatsapp mx-2 fa-2x"></i
-                  ></a>
+                  <a href="#" class="text-white"><i class="fa-brands fa-whatsapp mx-2 fa-2x"></i></a>
                 </li>
                 <li>
-                  <a href="#" class="text-white"
-                    ><i class="fa-brands fa-youtube mx-2 fa-2x"></i
-                  ></a>
+                  <a href="#" class="text-white"><i class="fa-brands fa-youtube mx-2 fa-2x"></i></a>
                 </li>
                 <li>
-                  <a href="#" class="text-white"
-                    ><i class="fa-brands fa-instagram mx-2 fa-2x"></i
-                  ></a>
+                  <a href="#" class="text-white"><i class="fa-brands fa-instagram mx-2 fa-2x"></i></a>
                 </li>
               </ul>
             </div>
@@ -330,9 +312,7 @@
           <div class="row">
             <div class="col-md-12 text-center pt-1">
               <p>
-                <a href="" style="color: #ccb800" class="text-decoration-none"
-                  >2022 © All rights reserved by Kelompok 11</a
-                >
+                <a href="" style="color: #ccb800" class="text-decoration-none">2022 © All rights reserved by Kelompok 11</a>
               </p>
             </div>
           </div>
@@ -344,11 +324,10 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Script AOS  -->
     <script>
-      const btnmessage = document.getElementById('btnmessage');
-      btnmessage.addEventListener('click', function(){
-        Swal.fire('Your message has been successfully sent')
-
-      })
+      const btnmessage = document.getElementById("btnmessage");
+      btnmessage.addEventListener("click", function () {
+        Swal.fire("Your message has been successfully sent");
+      });
     </script>
 
     <script
