menmabhakan pict di about

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-6">
             <div class="deskripsi text-center">
               <p>
-                Eazy is a service company that focuses on the field of web design. <br />We help make your web design a reality. With Eazy your work
-                will be easy. <br />
+                Eazy is a service company that focuses on the field of web design. We help make your web design a reality. With Eazy your work
+                will be easy. 
                 Let our team of smart, passionate and creative talent help your business innovate and stay ahead of the competition in an
                 app-connected world. With a focus on our work manufacturing companies and consultancies, our vision is to understand our clients to
                 the fullest. This industry knowledge coupled with our collaborative approach ensures that our mission to deliver exceptional
@@ -92,6 +92,9 @@
               </p>
             </div>
           </div>
+            <div class="col-lg-6">
+<img src="pict/bg-about2.png">
+            </div>
         </div>
       </div>
     </section>
@@ -177,7 +180,7 @@
             </p>
           </div>
         </div>
-        <div class="row mt-5">
+        <div class="row mt-5 ">
           <div class="col-lg-6">
             <h3>Travel Website</h3>
             <p class="text-work">iOS | ANDROID | WEB DEVELOPMENT</p>
