--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg cs-nav bg-transparent my-4">
+    <nav class="navbar navbar-expand-lg cs-nav my-4 fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#"> <img src="pict/logo.png" alt="LogoEz" class="cs-logo" /> <span>Eazy</span></a>
         <button
@@ -57,7 +57,7 @@
 
     <!-- homepage -->
     <section class="home" id="home">
-      <div class="jumbotron jumbotron-fluid">
+      <div class="jumbotron  jumbotron-fluid">
         <div class="container">
           <div class="row home">
             <div class="col-12 col-lg-4">
@@ -83,7 +83,7 @@
           <div class="col-lg-6">
             <div class="deskripsi text-center">
               <p>
-                Eazy is a service company that focuses on the field of web design. We help make your web design a reality. With Eazy your work
+                <span>Eazy</span> is a service company that focuses on the field of web design. We help make your web design a reality. With Eazy your work
                 will be easy. 
                 Let our team of smart, passionate and creative talent help your business innovate and stay ahead of the competition in an
                 app-connected world. With a focus on our work manufacturing companies and consultancies, our vision is to understand our clients to
@@ -192,7 +192,7 @@
           <div class="col-lg-6"><img src="pict/fp1.png" alt="fp1.png" class="img-fluid" /></div>
         </div>
         <div class="row mt-5">
-          <div class="col-lg-6"><img src="pict/fp1(1).png" alt="fp1(1).png" class="img-fluid" style="height: 340px" /></div>
+          <div class="col-lg-6"><img src="pict/fp1(1).png" alt="fp1(1).png" class="img-fluid" style="height: 320px" /></div>
           <div class="col-lg-6">
             <h3>Development Webiste</h3>
             <p class="text-work">iOS | ANDROID | WEB DEVELOPMENT</p>
