--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
           </div>
             <div class="col-lg-6">
-<img src="pict/bg-about2.png">
+<img src="pict/bg-about2.png" style="width: 100%;">
             </div>
         </div>
       </div>
@@ -123,21 +123,21 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/pict/service1.png" class="justify-content-center w-90" alt="..." />
+              <img src="/pict/service1.png" class="justify-content-center w-85"  />
               <div class="carousel-caption d-md-block">
                 <h5>Mobile App Design</h5>
                 <p>We can create and realize your mobile app design</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./pict/service2.png" class="justify-content-center w-90" alt="..." />
+              <img src="./pict/service2.png" class="justify-content-center w-85"  />
               <div class="carousel-caption d-md-block">
                 <h5>Website Design</h5>
                 <p>We can create and realize the design of your website</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./pict/service3.png" class="justify-content-center w-90" alt="..." />
+              <img src="./pict/service3.png" class="justify-content-center w-85"  />
               <div class="carousel-caption d-md-block">
                 <h5>Desktop App Design</h5>
                 <p>We can create and realize your desktop app design</p>
