--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
     <!-- Css Customize -->
     <link rel="stylesheet" href="style.css" />
+
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
   </head>
   <body>
     <!-- navbar -->
@@ -60,10 +64,10 @@
       <div class="jumbotron  jumbotron-fluid">
         <div class="container">
           <div class="row home">
-            <div class="col-12 col-lg-4">
-              <h1>Web Design</h1>
-              <h3>A Digital Agency Focused on Web.</h3>
-              <p>We are a creative team of designers, developers, strategists, and producers building elevated websites.</p>
+            <div class="col-12 col-lg-4" >
+              <h1 data-aos="fade-up" data-aos-duration="1000">Web Design</h1>
+              <h3 data-aos="fade-up" data-aos-duration="2000">A Digital Agency Focused on Web.</h3>
+              <p data-aos="fade-up" data-aos-duration="3000">We are a creative team of designers, developers, strategists, and producers building elevated websites.</p>
             </div>
           </div>
         </div>
@@ -202,7 +206,7 @@
       </div>
       <div class="row-lg-12 work-button">
         <div class="col-lg-12  ">
-          <a class="btn " href="">See All Work</a>
+          <a class="btn " data-bs-toggle="modal" data-bs-target="#exampleModal">See All Work</a>
             </li>
         </div>
       </div>
@@ -323,6 +327,13 @@
       </section>
     </footer>
     <!--Footer-->
+
+    <!-- Modal -->
+    
+   
+    <!-- Modal -->
+
+
     <!-- sweetalert -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Script AOS  -->
@@ -338,5 +349,11 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+  </script>
   </body>
 </html>
