--- a/index.html
+++ b/index.html
@@ -64,10 +64,18 @@
       <div class="jumbotron  jumbotron-fluid">
         <div class="container">
           <div class="row home">
-            <div class="col-12 col-lg-4" >
+            <div class="col-12 col-lg-4 border" >
               <h1 data-aos="fade-up" data-aos-duration="1000">Web Design</h1>
               <h3 data-aos="fade-up" data-aos-duration="2000">A Digital Agency Focused on Web.</h3>
               <p data-aos="fade-up" data-aos-duration="3000">We are a creative team of designers, developers, strategists, and producers building elevated websites.</p>
+            </div>
+            <div class="col-12 col-lg-4" >
+              
+            </div>
+          </div>
+          <div class="row ">
+            <div class="col-lg-4 btn-see">
+              <a class=" btn btn-primary " href="#work">See our Work</a>
             </div>
           </div>
         </div>
@@ -97,7 +105,7 @@
             </div>
           </div>
             <div class="col-lg-6">
-<img src="pict/bg-about2.png" style="width: 100%;">
+              <img src="pict/bg-about2.png" style="width: 100%;">
             </div>
         </div>
       </div>
