ubah responsive homepage

--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
       <div class="jumbotron  jumbotron-fluid">
         <div class="container">
           <div class="row home">
-            <div class="col-12 col-lg-4 border" >
+            <div class="col-12 col-lg-4 " >
               <h1 data-aos="fade-up" data-aos-duration="1000">Web Design</h1>
               <h3 data-aos="fade-up" data-aos-duration="2000">A Digital Agency Focused on Web.</h3>
-              <p data-aos="fade-up" data-aos-duration="3000">We are a creative team of designers, developers, strategists, and producers building elevated websites.</p>
+              <p data-aos="fade-up" data-aos-duration="2600">We are a creative team of designers, developers, strategists, and producers building elevated websites.</p>
+              <div class="btn-see">
+              <a class=" btn btn-see  btn-primary " data-aos="fade-up" data-aos-duration="3000" href="#work">See our Work</a>
             </div>
-            <div class="col-12 col-lg-4" >
-              
+            </div>
+            <div class="col-12  col-lg-8" >
+              <img src="pict/back2.png">
             </div>
           </div>
-          <div class="row ">
-            <div class="col-lg-4 btn-see">
-              <a class=" btn btn-primary " href="#work">See our Work</a>
-            </div>
+         
           </div>
         </div>
       </div>
