merubah navbar fixed top background color

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg cs-nav my-4 fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 ">
       <div class="container">
         <a class="navbar-brand" href="#"> <img src="pict/logo.png" alt="LogoEz" class="cs-logo" /> <span>Eazy</span></a>
         <button
@@ -69,10 +69,10 @@
               <h3 data-aos="fade-up" data-aos-duration="2000">A Digital Agency Focused on Web.</h3>
               <p data-aos="fade-up" data-aos-duration="2600">We are a creative team of designers, developers, strategists, and producers building elevated websites.</p>
               <div class="btn-see">
-              <a class=" btn btn-see  btn-primary " data-aos="fade-up" data-aos-duration="3000" href="#work">See our Work</a>
+              <a class=" btn btn-see  btn-primary " data-aos="fade-up" data-aos-duration="2000" href="#work">See our Work</a>
             </div>
             </div>
-            <div class="col-12  col-lg-8" >
+            <div class="col-12  col-lg-8" data-aos="zoom-in" data-aos-duration="1000" >
               <img src="pict/back2.png">
             </div>
           </div>
@@ -88,12 +88,12 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1>About Us</h1>
+            <h1 data-aos="fade-up" data-aos-duration="1500" >About Us</h1>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-6">
-            <div class="deskripsi text-center">
+            <div class="deskripsi text-center" data-aos="fade-right" data-aos-duration="2000" >
               <p>
                 <span>Eazy</span> is a service company that focuses on the field of web design. We help make your web design a reality. With Eazy your work
                 will be easy. 
@@ -104,7 +104,7 @@
               </p>
             </div>
           </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6" data-aos="fade-left" data-aos-duration="2000" >
               <img src="pict/bg-about2.png" style="width: 100%;">
             </div>
         </div>
@@ -116,11 +116,12 @@
     <section class="service section-margin" id="service">
       <div class="container">
         <div class="row">
-          <div class="title-service text-center col-12">
+          <div class="title-service text-center col-12" data-aos="fade-up"
+          data-aos-anchor-placement="top-center"data-aos-duration='1500'>
             <h1>Our Valuable Service</h1>
           </div>
         </div>
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+        <div id="carouselExampleCaptions" data-aos="zoom-in" data-aos-duration="2000"  class="carousel slide" data-bs-ride="false">
           <div class="carousel-indicators">
             <button
               type="button"
@@ -173,18 +174,18 @@
     <section class="section-margin work" id="work">
       <div class="container">
         <div class="row-lg-12">
-          <div class="col-lg-12">
+          <div class="col-lg-12" data-aos="zoom-in" data-aos-duration="2000">
             <h1>Our Work</h1>
           </div>
         </div>
         <div class="row-lg-12">
-          <div class="col-lg-12">
+          <div class="col-lg-12" data-aos="zoom-in" data-aos-duration="2200"  >
             <h4>We have highly skilled engineers with excellent technical knowledge and experience in using the latest software standards.</h4>
           </div>
         </div>
         <div class="row mt-5">
-          <div class="col-lg-6"><img src="pict/fp2.png" alt="fp2.png" class="img-fluid" style="height: 330px" /></div>
-          <div class="col-lg-6">
+          <div class="col-lg-6" data-aos="fade-right" data-aos-duration="1000"  ><img src="pict/fp2.png" alt="fp2.png" class="img-fluid" style="height: 330px" /></div>
+          <div class="col-lg-6" data-aos="fade-left" data-aos-duration="1000">
             <h3>Rent Car Website</h3>
             <p class="text-work">iOS | ANDROID | WEB DEVELOPMENT</p>
             <p class="sub-text-work">
@@ -193,7 +194,7 @@
           </div>
         </div>
         <div class="row mt-5 ">
-          <div class="col-lg-6">
+          <div class="col-lg-6" data-aos="fade-right" data-aos-duration="1000">
             <h3>Travel Website</h3>
             <p class="text-work">iOS | ANDROID | WEB DEVELOPMENT</p>
             <p class="sub-text-work">
@@ -201,11 +202,11 @@
               still makes users comfortable and easy.
             </p>
           </div>
-          <div class="col-lg-6"><img src="pict/fp1.png" alt="fp1.png" class="img-fluid" /></div>
+          <div class="col-lg-6" data-aos="fade-left" data-aos-duration="1000"><img src="pict/fp1.png" alt="fp1.png" class="img-fluid" /></div>
         </div>
         <div class="row mt-5">
-          <div class="col-lg-6"><img src="pict/fp1(1).png" alt="fp1(1).png" class="img-fluid" style="height: 320px" /></div>
-          <div class="col-lg-6">
+          <div class="col-lg-6"data-aos="fade-right" data-aos-duration="1000"><img src="pict/fp1(1).png" alt="fp1(1).png" class="img-fluid" style="height: 320px" /></div>
+          <div class="col-lg-6" data-aos="fade-left" data-aos-duration="1000">
             <h3>Development Webiste</h3>
             <p class="text-work">iOS | ANDROID | WEB DEVELOPMENT</p>
             <p class="sub-text-work">We provide end to end web development services, from creating a prototype to building a complex ones.</p>
@@ -213,7 +214,7 @@
         </div>
       </div>
       <div class="row-lg-12 work-button">
-        <div class="col-lg-12  ">
+        <div class="col-lg-12" data-aos="flip-up" data-aos-duration="1000">
           <a class="btn " data-bs-toggle="modal" data-bs-target="#exampleModal">See All Work</a>
             </li>
         </div>
@@ -264,7 +265,7 @@
     <!--Footer-->
     <footer>
       <section class="footer">
-        <div class="container-fluid text-white p-3" style="background: #020e35">
+        <div class="container-fluid text-white p-3" style="background: #020e35" data-aos="fade-up" data-aos-duration="2000">
           <div class="row justify-content-around text-center text-md-start">
             <div class="col-md-2 text-center mt-3">
               <img src="./pict/logo.png" alt="" style="width: 50px; height: 50px" />
