--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     <!-- AOS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
+    <!-- JS -->
+    <script src="script.js"></script>
   </head>
-  <body>
+  <body onload="setInterval('displayTime()', 1000);">
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 ">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-2 ">
       <div class="container">
         <a class="navbar-brand" href="#"> <img src="pict/logo.png" alt="LogoEz" class="cs-logo" /> <span>Eazy</span></a>
         <button
@@ -52,6 +54,9 @@
             </li>
             <li class="nav-item">
               <a class="btn btn-primary contact-button" href="#contact-me">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <p id="jam" class="jam"></p>
             </li>
           </ul>
         </div>
