menambahkan icon dan merubah size gambar service

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <!-- JS -->
     <script src="script.js"></script>
+    <link rel="shorcut icon" href="./pict/logo.png" />
   </head>
   <body onload="setInterval('displayTime()', 1000);">
     <!-- navbar -->
@@ -141,21 +142,21 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/pict/service1.png" class="justify-content-center w-85"  />
+              <img src="/pict/service1.png" class="justify-content-center w-85" style="height:450px"  />
               <div class="carousel-caption d-md-block">
                 <h5>Mobile App Design</h5>
                 <p>We can create and realize your mobile app design</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./pict/service2.png" class="justify-content-center w-85"  />
+              <img src="./pict/service2.png" class="justify-content-center w-85" style="height:450px" />
               <div class="carousel-caption d-md-block">
                 <h5>Website Design</h5>
                 <p>We can create and realize the design of your website</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./pict/service3.png" class="justify-content-center w-85"  />
+              <img src="./pict/service3.png" class="justify-content-center w-85" style="height:450px" />
               <div class="carousel-caption d-md-block">
                 <h5>Desktop App Design</h5>
                 <p>We can create and realize your desktop app design</p>
